<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Twitter Lists</string>
    <string name="action_settings">Settings</string>
    <string name="title_twitterlist_list">Twitter Lists</string>
    <string name="title_twitterlist_detail">TwitterList Detail</string>
    <string name="login_text">Sign in with Twitter</string>
    <string name="member">member</string>
    <string name="members">members</string>
    <string name="menu_twitter_list_new">New list</string>
    <string name="twitter_list_dialog_new_name_hint">Name</string>
    <string name="twitter_list_dialog_new_description_hint">Description</string>
    <string name="twitter_list_dialog_manage_title_create">Create new Twitter list</string>
    <string name="twitter_list_dialog_manage_title_edit">Edit Twitter list</string>
    <string name="twitter_list_dialog_manage_pos_btn_create">Create list</string>
    <string name="twitter_list_dialog_manage_pos_btn_edit">Edit list</string>
    <string name="twitter_list_dialog_manage_neg_btn">Cancel</string>
    <string name="twitter_list_dialog_new_privacy_public">Public</string>
    <string name="twitter_list_dialog_new_privacy_private">Private</string>
    <string name="menu_twitter_list_delete">Delete list</string>
    <string name="menu_twitter_list_edit">Edit list</string>
    <string name="twitter_list_dialog_delete_msg">Are you sure you want to delete this Twitter list?</string>
    <string name="twitter_list_dialog_delete_pos_btn">Delete</string>
    <string name="twitter_list_dialog_delete_neg_btn">Cancel</string>
    <string name="menu_twitter_list_log_out">Log Out</string>
    <string name="list_detail_pager_title_members">Members</string>
    <string name="list_detail_pager_title_nonmembers">Other people you follow</string>
    <string name="pagination_loading_more_people">Loading more people…</string>
    <string name="text_no_members_in_the_list">No members in the list.</string>
    <string name="activity_login_title">Twitter List Manager</string>
    <string name="activity_login_subtitle">Manage your Twitter lists easily.</string>
    <string name="text_loading_3dots">Loading…</string>
    <string name="text_something_went_wrong">Something went wrong.</string>
    <string name="no_lists_for_user">"You don't have any lists yet. Start by creating one by tapping in the top right corner! "</string>

</resources>
