<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/login_background"
    android:orientation="vertical"
    tools:context=".ui.LoginActivity">

    <TextView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="30sp"
        android:gravity="center"
        android:fontFamily="sans-serif-light"
        android:textStyle="italic"
        android:textColor="#FFFFFF"
        android:text="@string/activity_login_title"/>

    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp">

        <com.twitter.sdk.android.core.identity.TwitterLoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/login_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@id/login_button"
            android:layout_centerHorizontal="true"
            android:textSize="25sp"
            android:gravity="center"
            android:fontFamily="sans-serif-light"
            android:textColor="#FFFFFF"
            android:text="@string/activity_login_subtitle"/>

        </RelativeLayout>

</LinearLayout>
